Added several comments throughout the project